# habr-scraper

./: .gitignore  README.md  pyproject.toml  scraper.py
habr_scraper/: habr.py  scraper.py
