[tool.poetry]
name = "habr-scraper"
version = "0.1.0"
description = "Code scraping Habr posts, by @c0ntribut0r"
authors = ["Alex <dontknow@mail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
click = "^8.1.3"
ipdb = "^0.13.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.1"
tenacity = "^8.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
